--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     testCompile "org.junit.jupiter:junit-jupiter-params:${JUNIT5_API_VERSION}"
     testCompile "org.junit.platform:junit-platform-launcher:${JUNIT5_PLATFORM_VERSION}"
     testCompile 'org.assertj:assertj-core:3.10.0'
-    testCompile 'org.mockito:mockito-junit-jupiter:2.17.0'
+    compile group: 'org.mockito', name: 'mockito-core', version: '2.22.0'
     testImplementation 'com.approvaltests:approvaltests:4.0.2'
 }
